[gd_scene load_steps=7 format=3 uid="uid://cblfsd3xdf0vu"]

[ext_resource type="Script" path="res://scripts/options.gd" id="1_1qcl4"]
[ext_resource type="FontFile" uid="uid://drd81v20b2ify" path="res://fonts/kirifont/KiriFont.ttf" id="3_1f7u4"]

[sub_resource type="GDScript" id="GDScript_igrol"]
script/source = "extends Control


# Called when the node enters the scene tree for the first time.
func _ready():

	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_11svw"]
bg_color = Color(0.372549, 0.176471, 0.490196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_76k6g"]
bg_color = Color(0.372549, 0.176471, 0.490196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ohmvh"]
bg_color = Color(0.372549, 0.176471, 0.490196, 1)

[node name="options" type="Node2D"]
process_mode = 3
script = ExtResource("1_1qcl4")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Window" type="Window" parent="."]
title = "Guardar partida"
initial_position = 1
size = Vector2i(450, 400)
unresizable = true
borderless = true

[node name="ColorRect" type="ColorRect" parent="Window"]
offset_right = 450.0
offset_bottom = 400.0
color = Color(0.352941, 0.254902, 0.490196, 1)

[node name="Control" type="Control" parent="Window/ColorRect"]
layout_mode = 3
anchors_preset = 0
offset_left = -50.0
offset_bottom = 50.0
script = SubResource("GDScript_igrol")

[node name="Panel" type="Panel" parent="Window/ColorRect/Control"]
layout_mode = 0
offset_left = 95.0
offset_top = 51.0
offset_right = 455.0
offset_bottom = 346.0

[node name="Save" type="Button" parent="Window/ColorRect/Control/Panel"]
layout_mode = 0
offset_left = 100.0
offset_top = 130.0
offset_right = 261.0
offset_bottom = 169.0
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_11svw")
text = "guardar partida
"

[node name="Back" type="Button" parent="Window/ColorRect/Control/Panel"]
layout_mode = 0
offset_left = 135.0
offset_top = 182.0
offset_right = 225.0
offset_bottom = 218.0
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_76k6g")
text = "Volver
"

[node name="Salir" type="Button" parent="Window/ColorRect/Control/Panel"]
layout_mode = 0
offset_left = 110.0
offset_top = 240.0
offset_right = 254.0
offset_bottom = 276.0
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_ohmvh")
text = "Salir del juego"

[node name="Label" type="Label" parent="Window/ColorRect/Control/Panel"]
layout_mode = 0
offset_left = 100.0
offset_top = 87.0
offset_right = 385.0
offset_bottom = 113.0
theme_override_fonts/font = ExtResource("3_1f7u4")
theme_override_font_sizes/font_size = 25
text = "Opciones
"

[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="pressed" from="Window/ColorRect/Control/Panel/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Window/ColorRect/Control/Panel/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Window/ColorRect/Control/Panel/Salir" to="." method="_on_salir_pressed"]
